crates/astro_codegen/tests/snapshots/global_selector_list_cartesian.snap
---
source: crates/astro_codegen/tests/css_scoping_snapshots.rs
expression: css
---
a c, a d, b c, b d {
  color: red;
}
