crates/astro_codegen/tests/snapshots/global_selector_list_scoped_ancestor.snap
---
source: crates/astro_codegen/tests/css_scoping_snapshots.rs
expression: css
---
.wrapper:where(.astro-icmhjx3i) ul, .wrapper:where(.astro-icmhjx3i) ol {
  margin: 0;
}
