crates/astro_codegen/tests/snapshots/global_suffix_stays_global.snap
---
source: crates/astro_codegen/tests/css_scoping_snapshots.rs
expression: css
---
a.cls {
  color: red;
}

a[role="button"] {
  color: #00f;
}
